Regression(r179584): Assertion hit in toResourceLoadPriority() on Yosemite https://bugs.webkit.org/show_bug.cgi?id=141230

Reviewed by Alexey Proskuryakov.

Handle -1 priority value again in toResourceLoadPriority() as it seems to
be returned by CFNetwork on some configurations.

No new tests, already covered by existing tests.

* platform/network/cf/ResourceRequestCFNet.h:
(WebCore::toResourceLoadPriority):

Canonical link: https://commits.webkit.org/159244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179593 268f45cc-cd09-0410-ab3c-d52691b4dbfc